# ferm-doe

./: .gitignore  AGENTS.md  BIOSAFETY.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  NON_CLAIMS.md  README.md  SECURITY.md  noxfile.py  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_doe_family.md  new_profile.md
.github/workflows/: ci.yml
agents/: claude.md  generic.md  linear.md  openai.yaml
deploy/: README.md
deploy/aws-lambda/: README.md  template.yaml
deploy/modal/: README.md  app.py
docs/: ADAPTER_DESIGN_NOTES.md  ADAPTER_MAP.md  AGENT_HARNESSES.md  AGENT_QUICKSTART.md  BACKEND_EVAL_FINDINGS.md  BIOMANUFACTURING_ADAPTIVE_BACKENDS.md  BOFIRE_CONSTRAINT_PATTERNS.md  BOFIRE_POSITIONING.md  CLI_REFERENCE.md  CONTRACTS.md  COST_MODEL_REALISM_CHECK.md  CROSS_CAMPAIGN_LESSONS.md  ENTMOOT_SWAP_DESIGN.md  GLOSSARY.md  ISSUE_PACK_COOKBOOK.md  ISSUE_PACK_GENERATION.md  OPEN_DATA_PUBLICATION_STRATEGY.md  PUBLIC_RELEASE_PREP.md  PUBLIC_SECURITY_MODEL.md  SCALE_BRIDGE.md  SELF_LEARNING_DOE.md  SIMULATOR_V2_SPEC.md  TOOL_REGISTRY.md  VISUAL_OVERVIEW.md  adaptive-wave2-assay-power-v0.md  data-model.md  engine-implementation.md  open-source-bioprocess-tool-survey-2026-05-15.md  self-learning-doe-runbook.md  starter-study-catalog.md  superpower-roadmap-vs-reference-doe.md  superpowers.md  tool-registry.json
docs/diagrams/: biosymphony-ferm-doe-roadmap.mmd
docs/research/: bo-tools-survey-2026-05-16.md
examples/: README.md
examples/adaptive-backend-eval/: README.md
examples/demo-media-cost-bofire/: README.md  campaign_manifest.json
examples/demo-pb-screening-public/: README.md  campaign_manifest.json
schemas/: campaign_manifest.schema.json  engine_task_request.schema.json  task_request.schema.json
scripts/: _contract_emitter.py  check_markdown_links.py  validate_smoke_artifacts.py
templates/: PARETO_LIT_CHECK.template.md  campaign-contract.md  engine_task_request.template.json  equipment-capacity.csv  factor-space.yaml  linear-issue.md  reagent-inventory.csv  sidecar-compute-policy.json  sidecar-input-pack.json  sidecar-provider-handoff.json  task_request.template.json
tests/: __init__.py  test_adapters.py  test_adaptive_backend_surface.py  test_adaptive_wave2_assay_power.py  test_adaptive_wave2_public.py  test_analysis.py  test_bridge.py  test_campaign_arms_ingest.py  test_campaign_arms_v1.py  test_campaign_inspector.py  test_closed_loop_wave2.py  test_cost_rollup.py  test_doe_generators.py  test_doe_parity_v1.py  test_doe_power.py  test_dossier_provenance.py  test_engine_superpowers_public.py  test_entmoot_adapter.py  test_execution_plan.py  test_family_recommender.py  test_finalize.py  test_flagship_scale_transfer_example.py  test_goals.py  test_issue_pack_loader.py  test_lambda_handler.py  test_materialization.py  test_module_readiness.py  test_omlt_strategy.py  test_optional_adapters.py  test_orchestration_brief.py  test_predicted_optimum.py  test_preflight_check.py  test_profiles_and_schema.py  test_provider_handoff.py  test_public_backport_adapters.py  test_public_contracts.py  test_public_release_check.py  test_public_release_gate.py  test_public_scaffold.py  test_pubmed_adapter.py  (+9 more)
(+353 files in other folders)
